--- a/app.json
+++ b/app.json
@@ -1,11 +1,13 @@
 {
-  "name": "Ruby on Rails",
-  "description": "A template for getting started with the popular Ruby framework.",
-  "website": "http://rubyonrails.org",
+  "name": "golovkin.cc",
+  "description": "My personal site",
+  "website": "http://golovkin.cc",
   "repository": "https://github.com/heroku/ruby-rails-sample",
   "logo": "https://upload.wikimedia.org/wikipedia/commons/c/c3/Ruby_on_Rails_logo.svg",
   "scripts": {
-    "postdeploy": "bundle exec rake db:migrate"
+    "dokku": {
+      "postdeploy": "bundle exec rake db:migrate"
+    }
   },
   "env": {
     "RAILS_ENV": "production",
