--- a/app.json
+++ b/app.json
@@ -6,7 +6,7 @@
   "logo": "https://upload.wikimedia.org/wikipedia/commons/c/c3/Ruby_on_Rails_logo.svg",
   "scripts": {
     "dokku": {
-      "postdeploy": "bundle exec rake db:migrate"
+      "postdeploy": "bundle exec rake db:migrate; bundle exec rake db:seed"
     }
   },
   "env": {
